tmx-carousel done

--- a/Index.html
+++ b/Index.html
@@ -194,6 +194,14 @@
                     alt="Logos partenaires"
                 />
             </section>
+            <!-- ===== Intro texte avant la navbar/slider (namespace: tmx-) ===== -->
+            <section class="tmx-intro" aria-labelledby="tmx-intro-title">
+                <h1 id="tmx-intro-title">Personnalisez chaque détail</h1>
+                <p class="tmx-intro-sub">
+                    Explorez toutes les options de customisation pour créer
+                    votre guitare unique
+                </p>
+            </section>
 
             <!-- ================== START — CARROUSEL PRODUITS (NAMESPACE: tmx-) ================== -->
             <section
@@ -219,7 +227,7 @@
                         <label class="tmx-tab" for="tmx-tab-bodies">
                             <img
                                 class="tmx-tab-icon"
-                                src="asset/icon/nav/icon-body.svg"
+                                src="asset/icon/icon_corps_guitare.png"
                                 alt=""
                             />
                             <span>Corps de la guitare</span>
@@ -229,7 +237,7 @@
                         <label class="tmx-tab" for="tmx-tab-pickups">
                             <img
                                 class="tmx-tab-icon"
-                                src="asset/icon/nav/icon-pickup.svg"
+                                src="asset/icon/icon_micros_guitare.png"
                                 alt=""
                             />
                             <span>Micros</span>
@@ -239,7 +247,7 @@
                         <label class="tmx-tab" for="tmx-tab-kits">
                             <img
                                 class="tmx-tab-icon"
-                                src="asset/icon/nav/icon-tools.svg"
+                                src="asset/icon/icon_kit_diy.png"
                                 alt=""
                             />
                             <span>Kits DIY</span>
@@ -256,7 +264,7 @@
                                 <!-- /* ICON TITRE : Corps de la guitare — remplace le src */ -->
                                 <img
                                     class="tmx-title-icon"
-                                    src="asset/icon/section/icon-body.svg"
+                                    src="asset/icon/icon_corps_guitare.png"
                                     alt=""
                                 />
                                 <h2>Corps de la guitare</h2>
@@ -267,7 +275,7 @@
                                     <!-- /* PHOTO : Acajou — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/corps/acajou.jpg"
+                                        src="asset/IMG/partie_guitare/Corps/acajou.png"
                                         alt="Acajou"
                                     />
                                     <h3>Acajou</h3>
@@ -279,7 +287,7 @@
                                     <!-- /* PHOTO : Ébène — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/corps/ebene.jpg"
+                                        src="asset/IMG/partie_guitare/Corps/Ebène.png"
                                         alt="Ébène"
                                     />
                                     <h3>Ébène</h3>
@@ -291,7 +299,7 @@
                                     <!-- /* PHOTO : Frêne — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/corps/frene.jpg"
+                                        src="asset/IMG/partie_guitare/Corps/Frêne.png"
                                         alt="Frêne"
                                     />
                                     <h3>Frêne</h3>
@@ -303,7 +311,7 @@
                                     <!-- /* PHOTO : Érable — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/corps/erable.jpg"
+                                        src="asset/IMG/partie_guitare/Corps/Érable.png"
                                         alt="Érable"
                                     />
                                     <h3>Érable</h3>
@@ -315,7 +323,7 @@
                                     <!-- /* PHOTO : Épicéa — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/corps/epicea.jpg"
+                                        src="asset/IMG/partie_guitare/Corps/Épicéa.png"
                                         alt="Épicéa"
                                     />
                                     <h3>Épicéa</h3>
@@ -331,7 +339,7 @@
                                 <!-- /* ICON TITRE : Micros — remplace le src */ -->
                                 <img
                                     class="tmx-title-icon"
-                                    src="asset/icon/section/icon-pickup.svg"
+                                    src="asset/icon/icon_micros_guitare.png"
                                     alt=""
                                 />
                                 <h2>Micros</h2>
@@ -342,7 +350,7 @@
                                     <!-- /* PHOTO : Single-coil — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/micros/single-coil.jpg"
+                                        src="asset/IMG/partie_guitare/Micros/Single-coil.png"
                                         alt="Single-coil"
                                     />
                                     <h3>Single-coil</h3>
@@ -354,7 +362,7 @@
                                     <!-- /* PHOTO : Humbucker — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/micros/humbucker.jpg"
+                                        src="asset/IMG/partie_guitare/Micros/Humbucker.png"
                                         alt="Humbucker"
                                     />
                                     <h3>Humbucker</h3>
@@ -366,7 +374,7 @@
                                     <!-- /* PHOTO : P90 — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/micros/p90.jpg"
+                                        src="asset/IMG/partie_guitare/Micros/P90.png"
                                         alt="P90"
                                     />
                                     <h3>P90</h3>
@@ -378,7 +386,7 @@
                                     <!-- /* PHOTO : Piezo — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/micros/piezo.jpg"
+                                        src="asset/IMG/partie_guitare/Micros/Piezo.png"
                                         alt="Piezo"
                                     />
                                     <h3>Piezo</h3>
@@ -390,7 +398,7 @@
                                     <!-- /* PHOTO : DiMarzio — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/micros/dimarzio.jpg"
+                                        src="asset/IMG/partie_guitare/Micros/DiMarzio.png"
                                         alt="DiMarzio"
                                     />
                                     <h3>DiMarzio</h3>
@@ -406,7 +414,7 @@
                                 <!-- /* ICON TITRE : Kits DIY — remplace le src */ -->
                                 <img
                                     class="tmx-title-icon"
-                                    src="asset/icon/section/icon-tools.svg"
+                                    src="asset/icon/icon_kit_diy.png"
                                     alt=""
                                 />
                                 <h2>Kits DIY</h2>
@@ -417,7 +425,7 @@
                                     <!-- /* PHOTO : Set Brûlant — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/kits/brulant.jpg"
+                                        src="asset/IMG/partie_guitare/Kit_diy/Set Brûlant 🔥.png"
                                         alt="Set Brûlant"
                                     />
                                     <h3>Set Brûlant 🔥</h3>
@@ -429,7 +437,7 @@
                                     <!-- /* PHOTO : Set Vintage — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/kits/vintage.jpg"
+                                        src="asset/IMG/partie_guitare/Kit_diy/Set Brûlant 🔥.png"
                                         alt="Set Vintage"
                                     />
                                     <h3>Set Vintage ♟️</h3>
@@ -441,7 +449,7 @@
                                     <!-- /* PHOTO : Set Blues — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/kits/blues.jpg"
+                                        src="asset/IMG/partie_guitare/Kit_diy/Set Blues 🎵.png"
                                         alt="Set Blues"
                                     />
                                     <h3>Set Blues 🎵</h3>
@@ -453,7 +461,7 @@
                                     <!-- /* PHOTO : Set Rock — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/kits/rock.jpg"
+                                        src="asset/IMG/partie_guitare/Kit_diy/Set Rock ⚡.png"
                                         alt="Set Rock"
                                     />
                                     <h3>Set Rock ✨</h3>
@@ -465,7 +473,7 @@
                                     <!-- /* PHOTO : Set Velouté — remplace le src */ -->
                                     <img
                                         class="tmx-thumb"
-                                        src="asset/IMG/kits/veloute.jpg"
+                                        src="asset/IMG/partie_guitare/Kit_diy/Set Velouté 🎼.png"
                                         alt="Set Velouté"
                                     />
                                     <h3>Set Velouté 侘</h3>
