section modele done

--- a/Index.html
+++ b/Index.html
@@ -511,7 +511,7 @@
                         <!-- /* PHOTO HERO — remplace le src par ta photo */ -->
                         <img
                             class="tmx2-photo"
-                            src="asset/IMG/page_slider/Rockeur.png"
+                            src="asset/IMG/page_slider/Rockeur_modele.png"
                             alt="Concert rock"
                         />
 
@@ -583,7 +583,7 @@
                         <!-- /* PHOTO HERO — remplace le src */ -->
                         <img
                             class="tmx2-photo"
-                            src="asset/IMG/page_slider/folk.png"
+                            src="asset/IMG/page_slider/folk_modèle.png"
                             alt="Guitare acoustique dans un champ"
                         />
 
@@ -653,7 +653,7 @@
                         <!-- /* PHOTO HERO — remplace le src */ -->
                         <img
                             class="tmx2-photo"
-                            src="asset/IMG/page_slider/Rythmique.png"
+                            src="asset/IMG/page_slider/Rythmique_modèle.png"
                             alt="Guitariste sur scène assis"
                         />
 
@@ -710,6 +710,11 @@
                 </article>
             </section>
         </main>
+        <div class="cta-center">
+            <button type="button" class="btn-contact">
+                <span class="text-gradient">Voir plus</span>
+            </button>
+        </div>
 
         <script>
             const burger = document.querySelector(".burger");
